fix table row hover color in dark mode

--- a/adminlte/schema/sketchy.css
+++ b/adminlte/schema/sketchy.css
@@ -1904,7 +1904,7 @@ progress {
   --bs-table-active-color: var(--bs-emphasis-color);
   --bs-table-active-bg: rgba(var(--bs-emphasis-color-rgb), 0.1);
   --bs-table-hover-color: var(--bs-emphasis-color);
-  --bs-table-hover-bg: #fff;
+  --bs-table-hover-bg: #626262;
   width: 100%;
   margin-bottom: 1rem;
   vertical-align: top;
